Fix overflow of footer

--- a/src/01/style.css
+++ b/src/01/style.css
@@ -51,6 +51,7 @@ footer {
     bottom: 0;
     left: 50vw;
     transform: translateX(-50%);
+    z-index: -1;
 }
 
 .center {
